<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_status">Status</string>
    <string name="menu_add">Hinzufügen</string>
    <string name="app_name">Messenger</string>
    <string name="menu_add_group">Gruppe hinzufügen</string>
    <string name="tab_contacts_label">Kontakte</string>
    <string name="tab_groups_label">Gruppen</string>
    <string name="new_messages_pt1">NEUE</string>
    <string name="new_messages_pt2_sing">NACHRICHT</string>
    <string name="new_messages_pt2_plur">NACHRICHTEN</string>
    <string name="menu_pref_label">Einstellungen</string>
    <string name="pref_username_label">Benutzername</string>
    <string name="pref_account_category_label">Kontodetails</string>
    <string name="pref_password_label">Passwort</string>
    <string name="pref_account_extended_label">Erweiterte Einstellungen</string>
    <string name="pref_account_server_label">Serveradresse</string>
    <string name="button_send">Senden</string>
    <string name="service_name">SheepMessenger Chat Service</string>
    <string name="send_file">Datei</string>
    <string name="send_smiley">Smiley</string>
    

</resources>